# legend-ai

./: .gitignore  README.md  implementation.md  main.py  plan.md  pyproject.toml
app/: route.py
app/api/: route.py
app/graph/: langgraph_builder.py
app/services/: engine_runner.py  medical_engine.py
config/: config.py  constants.py
data/: enmCodeList.csv  modifierList.csv  old_proCodeList.csv  proCodeList.csv
database/pgdb/: conn.py  models.py
database/sqldb/: conn.py  deps.py
ingestion/: ingest.py
llm_layer/: coding_prompt.py  cot_prompts.py  llm_client.py  medical_engine.py  note_extraction_schema.py  reasoning_prompt.py
logs/: audit.jsonl
scripts/: ingest_all.py  run_migrations.py
services/: audit_logger.py  boundary_checker.py  charge_lookup.py  clinical_parser.py  csv_handler.py  em_selector.py  embeddings.py  knowledge_base.py  lesion_validator.py  mdm_classifier.py  modifier_engine.py  procedure_models.py  procedure_normalizer.py  reasoning_engine.py  reranker.py  retriever.py  site_builder.py  validation_engine.py  web_lookup.py
services/code_selectors/: __init__.py  att_selector.py  base.py  biopsy_selector.py  closure_selector.py  debridement_selector.py  destruction_selector.py  excision_selector.py  mohs_selector.py  shave_removal_selector.py  srt_selector.py  xtrac_selector.py
src/data_layer/: biopsynoteid.py  mohsnoteid.py  mohsnotes.json  progressnote.py
src/data_layer/test/: CP_D&EP_id.json  IPL_id.json  IPL_notes.json  IPL_wom_id.json  IPL_wom_notes.json  (+33 more)
utils/: engine_utils.py  helper.py  parser.py  parser_utils.py
