[project]
name = "legend-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.3.2",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "buildtools>=1.0.6",
    "fastapi>=0.135.3",
    "langchain>=1.2.15",
    "langchain-core>=1.2.28",
    "langchain-openai>=1.1.13",
    "langgraph>=1.1.6",
    "logging>=0.4.9.6",
    "loguru>=0.7.3",
    "openai>=2.31.0",
    "pandas>=3.0.2",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.13.0",
    "pydantic-core>=2.46.0",
    "pydantic-settings>=2.13.1",
    "pymysql>=1.1.2",
    "setuptools>=82.0.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]
